--- a/style.css
+++ b/style.css
@@ -23,5 +23,7 @@
   padding: 7% 0;
   background-color: rgb(165, 42, 130);
   color: white;
-  font-size: 25px;
-  transform: skew(0deg, 0deg);
+  font-size: 2.4vw;
+  transform: skew(5deg, 171deg);
+}
+
